@@ -1,7 +1,11 @@
-2015-04-23  Jean-Louis Martineau <martineau@zmanda.com>
+2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm (set_error_to_unknown): New function
+	  that allow the tapescan to reset all slots with given error.
+
+2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Vault.pm: Create timer once.
 
-2015-04-23  Jean-Louis Martineau <martineau@zmanda.com>
+2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
 	* recover-src/extract_list.c: Abort a restore if application fail.
 
 2015-04-23  Jean-Louis Martineau <martineau@zmanda.com>
